Correct content overflow of cards.

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-.preloader-wrapper {
+#preloader-wrapper {
   position: fixed;
   margin: 0 45%;
 }
@@ -109,6 +109,7 @@ nav ul {
   box-shadow: none;
   border-top: 1px solid #9e9e9e;
   margin: 0 1.4rem;
+  overflow-wrap: break-word;
 }
 
 .drop-arrow {
@@ -256,10 +257,11 @@ input[type="text"]:not(.browser-default) {
   bottom: 0;
   width: 100%;
   text-align: center;
+  background-color: white;
 }
 
 .footer a {
-  color: inherit;
+  color: #ff5252;
 }
 
 .menu-button {
@@ -277,14 +279,14 @@ nav .nav-wrapper i, nav i .material-icons {
 
   .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 33% 33% 33%;
     margin: 0 2.5rem;
   }
 
 @media only screen and (max-width: 1024px) {
   .grid-container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% 50%;
   }
   
   .preloader-wrapper {
@@ -295,7 +297,7 @@ nav .nav-wrapper i, nav i .material-icons {
 @media only screen and (max-width: 650px) {
   .grid-container {
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: 100%;
   }
   .preloader-wrapper{
     margin: 0 35%;
